--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     margin: 0; /* Eliminar márgenes por defecto */
     padding: 0; /* Eliminar padding por defecto */
     overflow-x: hidden; /* Evitar el desplazamiento horizontal */
-    background-color: #dae1e7;
+    background-color: #9FBDE0;
     box-sizing: border-box; /*sirve para que el ancho y la altura de un elemento incluyan el relleno y el borde. */
 }
 
@@ -71,7 +71,7 @@ header {
 }
 
 .dudas, .micarrito {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
     margin: 0;
 }
 
@@ -102,18 +102,20 @@ header {
 }
 
 .carrusel-container {
+    background-color: #9FBDE0;
     display: flex;
     justify-content: center;
+    padding-top: 1%;
     align-items: center;
     flex-direction: column; /* Para que el carrusel y la imagen extra se alineen en columna */
-    margin-top: 20px; /* Espaciado opcional */
+    /*margin-top: 20px;*/ /* Espaciado opcional */
 }
 
 
 .destacados {
     text-align: center;
     margin: 20px auto;
-    background-color: #f8f8f8;
+    background-color: #9FBDE0;
     padding: 20px;
     border-radius: 10px;
 }
@@ -122,6 +124,8 @@ header {
     background-color: #1c3b6c;
     color: white;
     padding: 10px;
+    margin-top: -20.5%;
+    margin-bottom: 1.5%;
     border-radius: 5px;
     display: inline-block;
 }
@@ -130,14 +134,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-x: scroll;
+    overflow-x: hidden;
     position: relative;
 }
 
 .productos {
     display: flex;
-    gap: 15px;
+    gap: 15px;/*Espacio entre los productos*/
     transition: transform 0.5s ease-in-out;
+    overflow: hidden; /* Evita que el contenido se desborde */
 }
 
 .producto {
@@ -325,7 +330,14 @@ header {
 
 
 
-
+footer{
+    background-color:#183661;
+    color: white;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    padding: 2rem;;
+}
 
 
 
