--- a/css/mayoria.css
+++ b/css/mayoria.css
@@ -20,11 +20,12 @@
     background: #f0f4f8; /* Fondo similar a la primera imagen */
     border: 2px solid #d1d9e6;
     border-radius: 10px;
-    padding: 15px;
+    /*padding: 15px;*/
     text-align: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 280px;
+    height: auto;
+    max-width: 300px;
 }
 
 .producto img {
