--- a/css/mayoria.css
+++ b/css/mayoria.css
@@ -40,7 +40,9 @@
 
 
 .producto h2 {
-    background: #a6c5e9; /* Color de fondo similar al de las tabletas */
+    background: #f0f4f8; /* Color de fondo similar al de las tabletas */
+    border: 2px solid #d1d9e6;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     color: #003366;
     font-size: 16px;
     font-weight: bold;
