--- a/css/Programacion.css
+++ b/css/Programacion.css
@@ -50,15 +50,37 @@ header {
     text-align: left;
     margin: 0;
 }
-
+.search-container {
+    position: relative;
+    display: inline-block;
+  }
+  
 /* Ajusta el tamaño del input de busqueda del header */
 .busqueda {
-    width: 40%; /* Ajustable para mejor responsividad */
-    padding: 10px;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: none;
+  padding: 10px;
+  padding-right: 40px; /* Para dejar espacio para el ícono */
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  width: 950px;
 }
+  
+.search-button {
+   position: absolute;
+   right: 10px;
+   top: 50%;
+   transform: translateY(-50%);
+   background: transparent;
+   border: none;
+   cursor: pointer;
+}
+  
+.search-button i {
+   font-size: 18px;
+   color: #333;
+}
+
+
 
 /* Ajusta la imagen del logo de ayuda para que se vea mejor en el header */
 .AyudaImg {
