--- a/css/global.css
+++ b/css/global.css
@@ -44,6 +44,11 @@ footer{
 .logo {
     width: 60px; /* Tamaño más manejable */
     height: auto;
+    
+}
+
+.logo:hover{
+    transform: scale(1.1);
 }
 
 .Titulo {
@@ -97,9 +102,13 @@ footer{
     gap: 5px;
 }
 
-.ayuda, .carro {
+.ayuda {
     width: 40px; /* Tamaño uniforme */
     height: auto;
+}
+
+.ayuda:hover{
+    transform: scale(1.1);
 }
 
 .dudas, .micarrito {
