--- a/css/Programacion.css
+++ b/css/Programacion.css
@@ -4,7 +4,7 @@ html {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100%;
-    min-height: 100vh; /* Cambié height: 100% a min-height: 100vh */
+    min-height: 100%; /* Cambié height: 100% a min-height: 100vh */
     overflow-x: hidden !important; /* Evita el desplazamiento horizontal */
 
 }
@@ -118,7 +118,6 @@ header {
     text-align: center;
     font-weight: bold;
     padding: 10px 15px;
-    margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 10px; /* Bordes redondeados */
     transition: background-color 0.3s, transform 0.2s;
@@ -160,7 +159,6 @@ header {
     color: white;
     padding: 10px;
     margin-top: auto;
-    
 }
 
 .textoFooter {
