--- a/css/mayoria.css
+++ b/css/mayoria.css
@@ -4,13 +4,11 @@
 
 .productos {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columnas */
-    gap: 20px; /* Espacio entre elementos */
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas de igual tamaño */
+    grid-template-rows: repeat(2, 1fr); /* 2 filas de igual tamaño */
+    gap: 10px; /* Espacio entre las celdas */
     justify-items: center;
     align-items: center;
-    /*margin: 20px auto;*/
-    /*max-width: 900px; /* Ajusta según el diseño */
-    max-width: 2024px;
     height: auto;
     padding-top: 12px;
     padding-bottom: 29px;
@@ -25,6 +23,11 @@
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.producto:hover{
+    transform: scale(1.1);
 }
 
 .producto img {
@@ -35,6 +38,9 @@
     border-radius: 10px;
     display: block;
     margin: 0 auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-top: 11px;
 }
 
 
